...
    @State private var isDropTargeted = false

    var body: some View {
        NavigationStack {
            Form {
                Section(header: Text("👤 User").font(.headline)) {
                    TextField("Enter username", text: $username)
                        .textInputAutocapitalization(.none)
                        .disableAutocorrection(true)
                        .accessibilityIdentifier("Enter username")
                }

                Section(header: Text("📝 Caption").font(.headline)) {
...
